# implementations

./: .gitignore  README.md
c/: CMakeLists.txt  Doxyfile  example.c
c/docs/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c85d3e3c5052e9ad9ce18c6863244a25.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  index.html  linked__list_8h_source.html  structint__llnode-members.html  structint__llnode.html
c/docs/html/search/: classes_0.js
c/include/data_structures/: linked_list.h
c/include/data_structures/lists/: linked_list.h
c/src/data_structures/: linked_list.c
c/src/data_structures/lists/: linked_list.c
c/test/: CMakeLists.txt
c/test/data_structures_tests/: linked_list_tests.cpp
c/test/data_structures_tests/linked_list_tests/: add_llnode_tests.cpp  clear_llnode_tests.cpp  remove_llnode_tests.cpp
c/test/data_structures_tests/lists_tests/linked_list_tests/: add_llnode_tests.cpp  clear_llnode_tests.cpp  remove_llnode_tests.cpp
